[package]
name = "opal-wm"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["libopal", "opal-abi"]

[dependencies]
safa-api = { version = "0.4.3", git = "https://github.com/SafaOS/safa-api", features = ["std"] }
libopal = { path = "libopal" }
opal-abi = { path = "opal-abi" }
thiserror = "2.0.14"
zerocopy = "0.8.26"
zerocopy-derive = "0.8.26"
rustc-hash = "2.1.1"
indexmap = "2.10.0"
